@@ -4,13 +4,16 @@ import com.shop.respawn.domain.Buyer;
 import com.shop.respawn.domain.InquiryStatus;
 import com.shop.respawn.domain.Item;
 import com.shop.respawn.domain.ProductInquiry;
-import com.shop.respawn.dto.productInquiry.ProductInquiryRequestDto;
-import com.shop.respawn.dto.productInquiry.ProductInquiryResponseDto;
-import com.shop.respawn.dto.productInquiry.ProductInquiryResponseTitlesDto;
+import com.shop.respawn.dto.productInquiry.InquiryRequest;
+import com.shop.respawn.dto.productInquiry.InquiryResponse;
+import com.shop.respawn.dto.productInquiry.InquirySummaryResponse;
 import com.shop.respawn.repository.jpa.BuyerRepository;
 import com.shop.respawn.repository.mongo.ProductInquiryRepository;
 import com.shop.respawn.util.MaskingUtil;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
@@ -27,55 +30,36 @@ public class ProductInquiryService {
     private final ItemService itemService;
 
     // 문의 ID로 상세 조회
-    public ProductInquiryResponseDto getInquiryById(String inquiryId) {
-        ProductInquiryResponseDto productInquiryResponseDto = productInquiryRepository.findById(inquiryId)
+    public InquiryResponse getInquiryById(String inquiryId) {
+        InquiryResponse inquiryResponse = productInquiryRepository.findById(inquiryId)
                 .map(this::toResponseDto)
                 .orElse(null);
-        if (productInquiryResponseDto != null) {
-            String buyerId = productInquiryResponseDto.getBuyerId();
+        if (inquiryResponse != null) {
+            String buyerId = inquiryResponse.getBuyerId();
             Buyer findBuyer = buyerRepository.findById(Long.valueOf(buyerId))
                     .orElseThrow(() -> new RuntimeException("구매자를 찾을 수 없습니다."));
             String maskUsername = MaskingUtil.maskUsername(findBuyer.getUsername());
-            productInquiryResponseDto.setBuyerUsername(maskUsername);
+            inquiryResponse.setBuyerUsername(maskUsername);
         }
-        return productInquiryResponseDto;
+        return inquiryResponse;
     }
 
     //상품별 제목 조회
-    public List<ProductInquiryResponseTitlesDto> getInquiryTitlesByItemId(String itemId) {
+    public List<InquirySummaryResponse> getInquiryTitlesByItemId(String itemId) {
         List<ProductInquiry> inquiries = productInquiryRepository.findAllByItemIdOrderByQuestionDateDesc(itemId);
-
-        return inquiries.stream()
-                .map(i -> {
-                    ProductInquiryResponseTitlesDto dto = new ProductInquiryResponseTitlesDto();
-                    dto.setId(i.getId());
-                    dto.setItemId(i.getItemId());
-
-                    String question = i.getQuestion();
-                    dto.setQuestion(question.length() > 30 ? question.substring(0, 30) + "..." : question);
-                    dto.setInquiryType(i.getInquiryType());
-                    dto.setStatus(i.getStatus().name());
-                    dto.setQuestionDate(i.getQuestionDate());
-                    dto.setOpenToPublic(i.isOpenToPublic());
-
-                    // 구매자 username 조회 후 마스킹 처리
-                    String username = buyerRepository.findById(Long.valueOf(i.getBuyerId()))
-                            .map(buyer -> MaskingUtil.maskUsername(buyer.getUsername()))
-                            .orElse("알 수 없음");
-                    dto.setBuyerId(i.getBuyerId());
-                    dto.setBuyerUsername(username);
-
-                    return dto;
-                })
-                .collect(Collectors.toList());
+        return getInquirySummaryResponses(inquiries);
     }
 
     // 제목용 제목 목록 조회 (question 일부만 잘라서 리턴하는 별도 DTO/방법 추천)
-    public List<ProductInquiryResponseTitlesDto> getAllInquiryTitles() {
+    public List<InquirySummaryResponse> getAllInquiryTitles() {
         List<ProductInquiry> inquiries = productInquiryRepository.findAll();
+        return getInquirySummaryResponses(inquiries);
+    }
+
+    private List<InquirySummaryResponse> getInquirySummaryResponses(List<ProductInquiry> inquiries) {
         return inquiries.stream()
                 .map(i -> {
-                    ProductInquiryResponseTitlesDto dto = new ProductInquiryResponseTitlesDto();
+                    InquirySummaryResponse dto = new InquirySummaryResponse();
                     dto.setId(i.getId());
                     dto.setItemId(i.getItemId());
                     // 제목 역할을 하는 question의 앞부분만 보이도록 처리 (예: 30자)
@@ -99,7 +83,7 @@ public class ProductInquiryService {
     }
 
     // 상품 문의 등록
-    public ProductInquiryResponseDto createInquiry(String buyerId, ProductInquiryRequestDto dto) {
+    public InquiryResponse createInquiry(String buyerId, InquiryRequest dto) {
 
         ProductInquiry inquiry = new ProductInquiry();
         inquiry.setBuyerId(buyerId);
@@ -116,27 +100,35 @@ public class ProductInquiryService {
         return toResponseDto(saved);
     }
 
-    public List<ProductInquiryResponseDto> getInquiriesByBuyer(String buyerId) {
-        List<ProductInquiry> inquiries = productInquiryRepository.findAllByBuyerIdOrderByQuestionDateDesc(buyerId);
-        // 문의에 포함된 itemId 추출 및 중복 제거
-        List<String> itemIds = inquiries.stream()
+    public Page<InquiryResponse> getInquiriesByBuyer(String buyerId, Pageable pageable) {
+        // 1) 문의 페이징 조회
+        Page<ProductInquiry> page = productInquiryRepository.findByBuyerId(buyerId, pageable);
+
+        if (page.isEmpty()) {
+            return Page.empty(pageable);
+        }
+
+        // 2) itemIds 추출(distinct)
+        List<String> itemIds = page.getContent().stream()
                 .map(ProductInquiry::getItemId)
                 .distinct()
                 .toList();
 
-        // 해당 상품들 조회
-        List<Item> items = itemService.getItemsByIds(itemIds);
-
-        // itemId -> itemName 매핑
+        // 3) Item 일괄 조회 (부분 필드 조회 있으면 우선 사용)
+        List<Item> items = itemService.getItemsByIds(itemIds); // 또는 getPartialItemsByIds
         Map<String, String> itemIdToName = items.stream()
                 .collect(Collectors.toMap(Item::getId, Item::getName));
 
-        return inquiries.stream()
-                .map(inquiry -> toResponseDtoWithItemName(inquiry, itemIdToName))
-                .collect(Collectors.toList());
+        // 4) DTO 매핑
+        List<InquiryResponse> content = page.getContent().stream()
+                .map(productInquiry -> toResponseDtoWithItemName(productInquiry, itemIdToName))
+                .toList();
+
+        // 5) Page로 래핑
+        return new PageImpl<>(content, pageable, page.getTotalElements()); // [attached_file:2]
     }
 
-    public List<ProductInquiryResponseDto> getInquiriesByItem(String itemId) {
+    public List<InquiryResponse> getInquiriesByItem(String itemId) {
         List<ProductInquiry> inquiries = productInquiryRepository.findAllByItemIdOrderByQuestionDateDesc(itemId);
         return inquiries.stream()
                 .map(this::toResponseDto)
@@ -144,7 +136,7 @@ public class ProductInquiryService {
     }
 
     // 판매자의 상품에 달린 모든 문의 조회
-    public List<ProductInquiryResponseDto> getInquiriesBySellerId(String sellerId) {
+    public List<InquiryResponse> getInquiriesBySellerId(String sellerId) {
         // 1) 해당 판매자가 판매하는 상품 ID 리스트 조회
         List<Item> sellerItems = itemService.getItemsBySellerId(sellerId);
         List<String> sellerItemIds = sellerItems.stream()
@@ -167,7 +159,7 @@ public class ProductInquiryService {
     }
 
     // 판매자가 문의에 답변 등록
-    public ProductInquiryResponseDto answerInquiry(String inquiryId, String answer, String sellerId) {
+    public InquiryResponse answerInquiry(String inquiryId, String answer, String sellerId) {
         ProductInquiry inquiry = productInquiryRepository.findById(inquiryId)
                 .orElseThrow(() -> new RuntimeException("문의가 존재하지 않습니다."));
 
@@ -190,51 +182,41 @@ public class ProductInquiryService {
     }
 
 
-    private ProductInquiryResponseDto toResponseDto(ProductInquiry entity) {
-
+    private InquiryResponse toResponseDto(ProductInquiry entity) {
         // buyerId로 구매자 정보 조회
         String buyerId = entity.getBuyerId();
         String buyerUsername = buyerRepository.findById(Long.valueOf(buyerId))
                 .map(Buyer::getUsername)
                 .orElse("알 수 없음");
 
-        ProductInquiryResponseDto dto = new ProductInquiryResponseDto();
-        dto.setId(entity.getId());
-        dto.setBuyerId(entity.getBuyerId());
-        dto.setBuyerUsername(buyerUsername);
-        dto.setItemId(entity.getItemId());
-        dto.setInquiryType(entity.getInquiryType());
-        dto.setQuestion(entity.getQuestion());
-        dto.setQuestionDetail(entity.getQuestionDetail());
-        dto.setAnswer(entity.getAnswer());
-        dto.setQuestionDate(entity.getQuestionDate());
-        dto.setAnswerDate(entity.getAnswerDate());
-        dto.setStatus(entity.getStatus().name());
-        dto.setOpenToPublic(entity.isOpenToPublic());
-        return dto;
+        return toInquiryResponseDto(entity, buyerUsername);
     }
 
-    private ProductInquiryResponseDto toResponseDtoWithItemName(ProductInquiry entity, Map<String, String> itemIdToName) {
-        ProductInquiryResponseDto dto = new ProductInquiryResponseDto();
-        dto.setId(entity.getId());
-        dto.setBuyerId(entity.getBuyerId());
-
+    private InquiryResponse toResponseDtoWithItemName(ProductInquiry entity, Map<String, String> itemIdToName) {
         // 구매자 username 추가 시 연동 가능
         String buyerUsername = buyerRepository.findById(Long.valueOf(entity.getBuyerId()))
                 .map(Buyer::getUsername)
                 .orElse("알 수 없음");
-        dto.setBuyerUsername(buyerUsername);
 
-        dto.setItemId(entity.getItemId());
-        dto.setItemName(itemIdToName.getOrDefault(entity.getItemId(), "알 수 없는 상품"));  // 상품명 세팅
+        InquiryResponse inquiryResponseDto = toInquiryResponseDto(entity, buyerUsername);
+        inquiryResponseDto.setItemName(itemIdToName.getOrDefault(entity.getItemId(), "알 수 없는 상품"));  // 상품명 세팅
+        return inquiryResponseDto;
+    }
 
-        dto.setQuestion(entity.getQuestion());
-        dto.setAnswer(entity.getAnswer());
-        dto.setQuestionDate(entity.getQuestionDate());
-        dto.setAnswerDate(entity.getAnswerDate());
-        dto.setStatus(entity.getStatus().name());
-        dto.setOpenToPublic(entity.isOpenToPublic());
-
-        return dto;
+    private InquiryResponse toInquiryResponseDto(ProductInquiry entity, String buyerUsername) {
+        InquiryResponse inquiryResponse = new InquiryResponse();
+        inquiryResponse.setId(entity.getId());
+        inquiryResponse.setBuyerId(entity.getBuyerId());
+        inquiryResponse.setBuyerUsername(buyerUsername);
+        inquiryResponse.setItemId(entity.getItemId());
+        inquiryResponse.setInquiryType(entity.getInquiryType());
+        inquiryResponse.setQuestion(entity.getQuestion());
+        inquiryResponse.setQuestionDetail(entity.getQuestionDetail());
+        inquiryResponse.setAnswer(entity.getAnswer());
+        inquiryResponse.setQuestionDate(entity.getQuestionDate());
+        inquiryResponse.setAnswerDate(entity.getAnswerDate());
+        inquiryResponse.setStatus(entity.getStatus().name());
+        inquiryResponse.setOpenToPublic(entity.isOpenToPublic());
+        return inquiryResponse;
     }
 }
